chore(styles): connect theme toggle UI flickering fix

--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -44,7 +44,14 @@
 }
 
 .dark-mode-portal {
+    --opacity: 0;
+
     position: fixed;
     top: 15px;
     right: 15px;
+    opacity: var(--opacity);
+
+    &.visible {
+        opacity: 1;
+    }
 }
